deploy/argocd/apps/keycloak/resources/calico-ingress-policy-nginx-gwf.yaml
---
# =============================================================================
# Calico NetworkPolicy - Keycloak Ingress from NGINX Gateway Fabric
# Calico equivalent of: cilium-ingress-policy-nginx-gwf.yaml
# =============================================================================
# Allows access to Keycloak web UI from NGINX Gateway Fabric
# Internal communication is handled by calico-ingress-policy.yaml
# =============================================================================
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: keycloak-ingress-nginx-gwf
  namespace: keycloak
spec:
  selector: all()
  types:
    - Ingress
  ingress:
    # Allow from NGINX Gateway Fabric (nginx-gateway namespace)
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: 'kubernetes.io/metadata.name == "nginx-gateway"'
      destination:
        ports:
          - 8443    # Keycloak HTTPS
